--- a/index.html
+++ b/index.html
@@ -4,64 +4,59 @@
 <head>
   <title>Palmer Link Tree</title>
   My link in bio
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
+  <meta charset="utf-8">
+  <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
   <div class="layout">
     <img
-      src="https://images.unsplash.com/photo-1513553404607-988bf2703777?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8b2NlYW58ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
-      alt="Picture of ocean" class="banner">
-
+      src="https://media.licdn.com/dms/image/C4E03AQF4t0FGuWbvrA/profile-displayphoto-shrink_800_800/0/1639771513744?e=1692835200&v=beta&t=D0btiEbCpJC0M87DsOHu9ryxhiIjct0Gnps0a-xNLMc"
+      alt="Picture of Palmer Lynch" class="banner">
+    <div class="name"> Palmer Lynch</div>
     <div class="Social">
-      <a href="https://www.linkedin.com/in/palmer-lynch-3434bb173/" target="_blank"> LinkedIn</a>
+      <a href="https://www.linkedin.com/in/palmer-lynch-3434bb173/" target="_blank"> <i
+          class="fa-brands fa-linkedin"></i></a>
     </div>
 
     <div class="item">
       <img
         src="https://yt3.googleusercontent.com/ytc/AGIKgqNeMy57wL7xbMrnDh22VaPHDakx6VS3UMe66De4zQ=s176-c-k-c0x00ffffff-no-rj"
-        alt="Alex Bromley's Logo">
-      <a href="https://www.youtube.com/channel/UCclRFAVSUGe8cu9JkvY6nNA" target="_blank"> Youtube Link for strength
+        alt="Alex Bromley's Logo" class="item_image">
+      <a href="https://www.youtube.com/channel/UCclRFAVSUGe8cu9JkvY6nNA" target="_blank" class="atag"> Youtube Link for
+        strength
         advice</a>
     </div>
 
     <div class="item">
       <img
         src="https://yt3.ggpht.com/iXs743mIrUqkDBGmkZzLjS8Pi8MofkaU9FtZsjwHf2cHLBG0uPrRpQjnOFYSoDxzGrrFgjTC=s48-c-k-c0x00ffffff-no-rj"
-        alt="Critical Role Logo">
-      <a href="https://www.youtube.com/watch?v=hD-LWHhiseE&list=PL1tiwbzkOjQyr6-gqJ8r29j_rJkR49uDN" target="_blank">How
+        alt="Critical Role Logo" class="item_image">
+      <a href="https://www.youtube.com/watch?v=hD-LWHhiseE&list=PL1tiwbzkOjQyr6-gqJ8r29j_rJkR49uDN" target="_blank"
+        class="atag">How
         to learn 5th edition Dungeons and Dragons</a>
     </div>
 
     <div class="item">
       <img
         src="https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y2F0fGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
-        alt="picture of a cat">
-      <a href="https://www.youtube.com/watch?v=js6IrC_6VcM&pp=ygUNZnVuIGNhdCBmYWN0cw%3D%3D" target="_blank">Fun Cat
+        alt="picture of a cat" class="item_image">
+      <a href="https://www.youtube.com/watch?v=js6IrC_6VcM&pp=ygUNZnVuIGNhdCBmYWN0cw%3D%3D" target="_blank"
+        class="atag">Fun Cat
         Facts</a>
     </div>
   </div>
-  <style>
-    body {
-      padding: 0 128px;
-    }
+  <div class="background--custom">
+    <canvas id="canvas"></canvas>
+  </div>
 
-    .banner {
-      width: 25%;
-    }
-
-    .layout {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .item {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-  </style>
+  <!-- Initialize site background -->
+  <script src="https://cdn.jsdelivr.net/gh/greentfrapp/pocoloco@minigl/minigl.js"></script>
+  <script>
+    var gradient = new Gradient();
+    gradient.initGradient("#canvas");
+  </script>
 
 </body>
 
