--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 
 <head>
   <title>Palmer Link Tree</title>
-  My link in bio
+  <!-- My link in bio -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
   <meta charset="utf-8">
   <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
+  <div class="background--custom">
+    <canvas id="canvas"></canvas>
+  </div>
   <div class="layout">
     <img
       src="https://media.licdn.com/dms/image/C4E03AQF4t0FGuWbvrA/profile-displayphoto-shrink_800_800/0/1639771513744?e=1692835200&v=beta&t=D0btiEbCpJC0M87DsOHu9ryxhiIjct0Gnps0a-xNLMc"
@@ -46,9 +49,6 @@
         class="atag">Fun Cat
         Facts</a>
     </div>
-  </div>
-  <div class="background--custom">
-    <canvas id="canvas"></canvas>
   </div>
 
   <!-- Initialize site background -->
